Removed front-end 'Number' validation from the address page on the phone and mobilephone fields.

--- a/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
@@ -40,11 +40,11 @@
             <div class="row">
                 <div class="col-md-6 no-vertical-margin control-group form-group">
                     <label>Mobile phone</label>
-                    @Html.TextBoxFor(x => x.BillingAddress.MobilePhoneNumber, new { @class = "form-control number margin-bottom" })
+                    @Html.TextBoxFor(x => x.BillingAddress.MobilePhoneNumber, new { @class = "form-control margin-bottom" })
                 </div>
                 <div class="col-md-6 no-vertical-margin control-group form-group">
                     <label>Phone</label>
-                    @Html.TextBoxFor(x => x.ShippingAddress.PhoneNumber, new { @class = "form-control number margin-bottom" })
+                    @Html.TextBoxFor(x => x.ShippingAddress.PhoneNumber, new { @class = "form-control margin-bottom" })
 
 
                 </div>
@@ -128,11 +128,11 @@
             <div class="row">
                 <div class="col-md-6 no-vertical-margin control-group form-group">
                     <label>Mobile phone</label>
-                    @Html.TextBoxFor(x => x.ShippingAddress.MobilePhoneNumber, new { @class = "col-md-12 form-control number margin-bottom" })
+                    @Html.TextBoxFor(x => x.ShippingAddress.MobilePhoneNumber, new { @class = "col-md-12 form-control margin-bottom" })
                 </div>
                 <div class="col-md-6 no-vertical-margin control-group form-group">
                     <label>Phone</label>
-                    @Html.TextBoxFor(x => x.ShippingAddress.PhoneNumber, new { @class = "col-md-12 form-control number margin-bottom" })
+                    @Html.TextBoxFor(x => x.ShippingAddress.PhoneNumber, new { @class = "col-md-12 form-control margin-bottom" })
 
                 </div>
             </div>
