--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -119,8 +119,9 @@ ul.nav.navbar-nav > li > div {
     .btn:hover {
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
         text-decoration: none;
-     
+	    -webkit-appearance: none;
     }
+
 .btn-uCommerce {
      border: 1px solid #59B4EE;
      background: #59B4EE; /*6dbe78*/
