--- a/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
@@ -71,7 +71,7 @@
 
                 <div class="col-md-6 no-vertical-margin control-group form-group">
                     <label>City</label>
-                    @Html.TextBoxFor(x => x.BillingAddress.City, new { @class = "form-control margin-bottom" })
+                    @Html.TextBoxFor(x => x.BillingAddress.City, new { @class = "form-control required margin-bottom" })
                     <label class="error-custom BillingAddressCity"></label>
                 </div>
             </div>
@@ -180,8 +180,10 @@
     </div>
     <div class="row margin-bottom margin-top">
         <div class="col-md-12">
-            <label for="toggleShippingView" class="display-inline">Use a different address for shipping</label>
-            @Html.CheckBoxFor(x => x.IsShippingAddressDifferent, new { @class = "js-address-checkbox display-inline" })
+            <label for="toggleShippingView" class="display-checkbox-inline">
+                Use a different address for shipping
+                @Html.CheckBoxFor(x => x.IsShippingAddressDifferent, new { @class = "js-address-checkbox" })
+            </label>
         </div>
     </div>
 
