--- a/src/AvenueClothing.Project.Website/Views/Sidebar Static Content/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Sidebar Static Content/Rendering.cshtml
@@ -8,16 +8,16 @@
         </li>
     </ol>
     <p class="powered-by-ucommerce">
-        <a href="http://ucommerce.dk/" title="The most feature rich e-commerce package for Umbraco" target="_blank"><img src="/img/ucommerce/ucommerce.png" alt="Powered by uCommerce"></a>
+        <a href="http://ucommerce.dk/" title="The most feature rich e-commerce package for Sitecore" target="_blank"><img src="/img/ucommerce/ucommerce.png" alt="Powered by uCommerce"></a>
     </p>
 </div>
 
 <div class="well sidebar-nav about">
     <h5>About Avenue Clothing</h5>
-    <p>Avenue Clothing is an example store to demonstrate the simple -yet powerful e-commerce functionality uCommerce brings to Umbraco.</p>
+    <p>Avenue Clothing is an example store to demonstrate the simple -yet powerful e-commerce functionality uCommerce brings to Sitecore.</p>
     <p>All products listed are from existing retailers but no orders will be fulfilled.</p>
     <p>
-        <a href="http://ucommerce.dk" class="btn btn-secondary" title="The most feature rich e-commerce package for Umbraco">More...</a>
+        <a href="http://ucommerce.dk" class="btn btn-secondary" title="The most feature rich e-commerce package for Sitecore">More...</a>
     </p>
 </div>
 
