--- a/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
@@ -8,7 +8,7 @@
 {
     <div class="well overflow-hidden">
         <div class="col-md-6">
-            <h3>Billing address</h3>
+            <legend>Billing address</legend>
             <br />
             <address>
                 @* 			@Html.Sitecore().Field("My Field Name");
@@ -99,7 +99,7 @@
                 {
                 <tr>
                     <td colspan="3">Order discounts: </td>
-                    <td class="money">- @Model.DiscountTotal</td>
+                    <td class="money">-@Model.DiscountTotal</td>
                 </tr>
             }
             @if (@Model.ShipmentAmount != 0)
