--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -719,9 +719,13 @@ p.btn-group.view-details {
 }
 
 .error-custom{
-   font-size: small;
    color: #d9534f!important; 
 }
+
+span.error-custom {
+       font-size: small;
+}
+
 input.error-input, textarea.error-input{
   border-color: #d9534f;
 }
@@ -874,6 +878,7 @@ table thead tr th.span6 {
     padding: 20px;
     width: 70%;
 }
+
 .banner-image p { 
     position: absolute;
     top: 125px;
@@ -881,6 +886,22 @@ table thead tr th.span6 {
     padding: 20px;
     width: 70%;
 }
-    .banner-image img {
+
+.banner-image img {
         width: 100%;
-    }
+  }
+
+.display-checkbox-inline {
+    display: block;
+    padding-left: 15px;
+    text-indent: -15px;
+}
+input.js-address-checkbox {
+    width: 13px;
+    height: 13px;
+    padding: 0;
+    margin: 0;
+    vertical-align: bottom;
+    position: relative;
+    top: -2px;
+}
