--- a/src/AvenueClothing.Project.Website/Views/Header/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Header/Rendering.cshtml
@@ -1,21 +1,18 @@
-﻿@using System.Web.Mvc.Html 
-@using Sitecore.Mvc
-@using Sitecore.Mvc.Presentation
+﻿@using Sitecore.Mvc
 @model Sitecore.Mvc.Presentation.RenderingModel
 @{
-	Layout = null;
+    Layout = null;
 }
 
 <div class="navbar navbar-fixed-top">
-	<div class="container">
+    <div class="container">
 
-		<div class="row">
-			<div class="navbar-header">
-				<a class="col-md-3 navbar-brand" href="/">Avenue Clothing</a>
-			</div>
+        <div class="row">
+            <div class="navbar-header">
+                <a class="col-md-3 navbar-brand" href="/">Avenue Clothing</a>
+            </div>
+           @Html.Sitecore().Placeholder("header content")
 
-			@Html.Sitecore().Placeholder("header content")
-
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
