fix "button" size issue on the product card.

--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -446,6 +446,7 @@
         padding: 0 0 0 14px;
         border: 0 none;
         line-height: 33px;
+	    overflow: hidden;
     }
 
     .product-list .product .view-details span {
