--- a/src/AvenueClothing.Project.Website/Views/Layout.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Layout.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     @Styles.Render("~/Content/css")
     @Html.Sitecore().Placeholder("head")
     @Scripts.Render("~/bundles/require")
