--- a/src/AvenueClothing.Project.Catalog/Views/Renderings/Searchbar.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/Renderings/Searchbar.cshtml
@@ -1,4 +1,7 @@
-﻿<form class="pull-xs-left form-inline navbar-form search-form" action="/search">
+﻿<span class="search-on-small-screen hide-on-large-screen" tabindex="0">
+    <i class="fa fa-search" aria-hidden="true"></i>
+</span>
+<form class="pull-xs-left form-inline navbar-form search-form hide-on-small-screen" action="/search">
     <div class="input-append input-group">
         <input type="text" name="search" class="form-control site-search" placeholder="Search the store" />
         <span class="input-group-btn">
@@ -8,3 +11,4 @@
         </span>
     </div>
 </form>
+
