fix style issue on the basket preview page.

--- a/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
@@ -8,7 +8,7 @@
 {
     <div class="well overflow-hidden">
         <div class="col-md-6">
-            <legend>Billing address</legend>
+            <h3>Billing address</h3>
             <br />
             <address>
                 @* 			@Html.Sitecore().Field("My Field Name");
