--- a/src/AvenueClothing.Project.Transaction/Views/Confirmation/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Confirmation/Rendering.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="alert alert-info">
-	<h1>@Model.Headline</h1>
+	<h1>@Model.Headline, @Model.FirstName!</h1>
 	<br />
 	<p>@Model.Message</p>
 </div>
