--- a/src/AvenueClothing.Project.Catalog/Views/Renderings/Searchbar.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/Renderings/Searchbar.cshtml
@@ -1,6 +1,6 @@
-﻿<span class="search-on-small-screen hide-on-large-screen" tabindex="0">
+﻿<div class="search-on-small-screen hide-on-large-screen">
     <i class="fa fa-search" aria-hidden="true"></i>
-</span>
+</div>
 <form class="pull-xs-left form-inline navbar-form search-form hide-on-small-screen" action="/search">
     <div class="input-append input-group">
         <input type="text" name="search" class="form-control site-search" placeholder="Search the store" />
