--- a/src/AvenueClothing.Project.Transaction/Views/MiniBasket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/MiniBasket/Rendering.cshtml
@@ -4,13 +4,12 @@
     var emptyClass = Model.IsEmpty ? null : "display:none;";
     var notEmptyClass = !Model.IsEmpty ? null : "display:none;";
 }
-
 <div class="js-mini-basket hide-on-small-screen" data-refresh-url="@Model.RefreshUrl" data-mini-basket-empty-selector=".js-mini-basket-empty" data-mini-basket-not-empty-selector=".js-mini-basket-not-empty" data-mini-basket-number-of-items-selector=".js-mini-basket-number-of-items" data-mini-basket-total-selector=".js-mini-basket-total">
     <div style="@emptyClass" class="js-mini-basket-empty @emptyClass">
         <div class="pull-xs-right navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    @*<div>Your basket is empty</div>*@
+                    <div>Your basket is empty</div>
                 </li>
             </ul>
         </div>
