--- a/src/AvenueClothing.Project.Header/Views/Header/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Header/Views/Header/Rendering.cshtml
@@ -6,13 +6,11 @@
 
 <div class="navbar navbar-fixed-top">
     <div class="container">
-
         <div class="row">
-            <div class="navbar-header">
-                <a class="col-md-4 navbar-brand" href="/">Avenue Clothing</a>
-            </div>
+            <a class="col-md-4 navbar-brand" href="/">
+                <span>Avenue Clothing</span>
+            </a>
             @Html.Sitecore().Placeholder("header content")
-
         </div>
     </div>
 </div>
