--- a/src/AvenueClothing.Project.Transaction/Views/MiniBasket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/MiniBasket/Rendering.cshtml
@@ -30,13 +30,11 @@
     </div>
 </div>
 
-<div class="js-mini-basket pull-xs-right hide-on-large-screen" data-refresh-url="@Model.RefreshUrl" data-mini-basket-empty-selector=".js-mini-basket-empty" data-mini-basket-not-empty-selector=".js-mini-basket-not-empty" data-mini-basket-number-of-items-selector=".js-mini-basket-number-of-items" data-mini-basket-total-selector=".js-mini-basket-total">
+<div class="js-mini-basket pull-xs-right hide-on-large-screen margin-right-small" data-refresh-url="@Model.RefreshUrl" data-mini-basket-empty-selector=".js-mini-basket-empty" data-mini-basket-not-empty-selector=".js-mini-basket-not-empty" data-mini-basket-number-of-items-selector=".js-mini-basket-number-of-items" data-mini-basket-total-selector=".js-mini-basket-total">
     <a href="/cart">
         <i class="fa fa-shopping-cart margin-right-small" aria-hidden="true"></i>
         <span class="items-in-minicart js-mini-basket-number-of-items">
             @Model.NumberOfItems
-            <!--     <span class="js-mini-basket-number-of-items">@Model.NumberOfItems</span> item(s): <span class="js-mini-basket-total">@Model.Total</span>
-             -->
         </span>
     </a>
 
