--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -21,7 +21,7 @@
     }
 
     h1 {
-        font-size: 60px;
+        font-size: 58px;
     }
 
     .well, .card .card-block {
@@ -942,4 +942,14 @@ input.js-address-checkbox {
     vertical-align: bottom;
     position: relative;
     top: -2px;
+}
+
+.confirmation-text {
+        position: relative;
+    padding-top: 15%;
+    font-size: 18px;
+}
+
+.confirmation-productImage {
+    margin-right: 10px;
 }
