Removed CC specific views for the shipping and payment pickers. The CC shipping and payment controllers redirect to the regular views. The forms on the views now submit to the controller from which they were rendered.

--- a/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
@@ -5,7 +5,7 @@
 	Layout = null;
 }
 
-@using (Html.BeginForm("CreatePayment", "PaymentPicker", FormMethod.Post))
+@using (Html.BeginForm(Model.ActionName, Model.ControllerName, FormMethod.Post))
 {
 	<legend>Payment method</legend>
 	if (@Model.AvailablePaymentMethods.Count > 0)
