Fixed loading resources in sitecore 9.2 properly.

--- a/src/AvenueClothing.Project.Website/Views/Layout.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Layout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
 
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/styles/css")
     @Html.Sitecore().Placeholder("head")
     @Scripts.Render("~/bundles/require")
     <script>
