--- a/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
@@ -17,7 +17,7 @@
 	
 	<aside class="js-price-calculation @Model.ProductPriceRenderingViewModel.ProductId" data-price-calculation-url="@Model.ProductPriceRenderingViewModel.CalculatePriceUrl" data-variant-price-calculation-url="@Model.ProductPriceRenderingViewModel.CalculateVariantPriceUrl" data-product-sku="@Model.ProductPriceRenderingViewModel.Sku" data-product-id="@Model.ProductPriceRenderingViewModel.ProductId" data-category-guid="@Model.ProductPriceRenderingViewModel.CategoryGuid" data-catalog-guid="@Model.ProductPriceRenderingViewModel.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
 		<div class="spinner @Model.ProductPriceRenderingViewModel.ProductId">
-			<img src="/sitecore modules/Shell/uCommerce/Images/Spinner/spinner.gif" alt="Smiley face" >
+			<img src="/img/uCommerce/spinner.gif" alt="Smiley face" >
 		</div>
 		<p class="item-price @Model.ProductPriceRenderingViewModel.ProductId" itemprop="price"></p>
 
