--- a/src/AvenueClothing.Project.Catalog/Views/ProductPrice/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductPrice/Rendering.cshtml
@@ -3,8 +3,8 @@
     Layout = null;
 }
 
-<aside class="js-price-calculation @Model.ProductId" data-price-calculation-url="@Model.CalculatePriceUrl" data-variant-price-calculation-url="@Model.CalculateVariantPriceUrl" data-product-sku="@Model.Sku" data-product-id="@Model.ProductId" data-category-guid="@Model.CategoryGuid" data-catalog-guid="@Model.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
-	<p class="item-price @Model.ProductId" itemprop="price"></p>
+<aside class="js-price-calculation @Model.ProductGuid" data-price-calculation-url="@Model.CalculatePriceUrl" data-variant-price-calculation-url="@Model.CalculateVariantPriceUrl" data-product-sku="@Model.Sku" data-product-id="@Model.ProductGuid" data-category-guid="@Model.CategoryGuid" data-catalog-guid="@Model.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
+	<p class="item-price @Model.ProductGuid" itemprop="price"></p>
 	<p class="item-tax">
 		<small class="tax">Incl. </small>
 	</p>
