fix: Update Ucommerce address in the footer.

--- a/src/AvenueClothing.Project.Website/Views/Footer/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Footer/Rendering.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="footerAddress">
-    <span itemprop="name" class="fpHighlight">uCommerce Aps</span> -
+    <span itemprop="name" class="fpHighlight">Ucommerce Aps</span> -
     <span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
-        <span itemprop="streetAddress" class="fpHighlight">Studsgade 29B</span> -
+        <span itemprop="streetAddress" class="fpHighlight">Klostergade 28, 2</span> -
         <span itemprop="postalCode" class="fpHighlight">8000</span> <span itemprop="addressLocality" class="fpHighlight">Aarhus C</span> -
         <span itemprop="addressCountry" class="fpHighlight">Denmark</span>
     </span>
