--- a/src/AvenueClothing.Project.Transaction/Views/CommerceConnectShippingPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/CommerceConnectShippingPicker/Rendering.cshtml
@@ -39,7 +39,7 @@
 	else
 	{
 		<p class="alert">
-			WARNING: No shipping methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">UCommerce</a> administration area.
+			WARNING: No shipping methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">Ucommerce</a> administration area.
 		</p>
 	}
 }
