--- a/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
@@ -37,7 +37,7 @@
 	else
 	{
 		<p class="alert">
-			WARNING: No payment methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">UCommerce</a> administration area.
+			WARNING: No payment methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">Ucommerce</a> administration area.
 		</p>
 	}
 }
