--- a/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
@@ -38,7 +38,7 @@
     else
     {
 		<p class="alert">
-			WARNING: No shipping methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">UCommerce</a> administration area.
+			WARNING: No shipping methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">Ucommerce</a> administration area.
 		</p>
 	}
 }
